--- a/index.html
+++ b/index.html
@@ -9,18 +9,35 @@
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
-  <!-- Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos -->
-  
+  <main>
+    <div class="card">
+      <div class="blue">
+        <div class="img-container">
+          <img src="./images/image-victor.jpg" alt="profile img">
+        </div>
+      </div>
+      <div class="infos">
+        <div class="user">
+          <div class="name">Victor Crest</div>
+          <div class="age">26</div>
+        </div>
+        <div class="adress">London</div>
+      </div>
+      <div class="stats">
+        <div class="stat">
+          <span class="bold">80K</span>
+          <span class="light">Followers</span>
+        </div>
+        <div class="stat">
+          <span class="bold">803K</span>
+          <span class="light">Likes</span>
+        </div>
+        <div class="stat">
+          <span class="bold">1.4K</span>
+          <span class="light">Photos</span>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
