--- a/index.html
+++ b/index.html
@@ -39,5 +39,11 @@
       </div>
     </div>
   </main>
+  <div class="top-pattern">
+    <img src="./images/bg-pattern-top.svg" alt="background">
+  </div>
+  <div class="bottom-pattern">
+    <img src="./images/bg-pattern-bottom.svg" alt="background">
+  </div>
 </body>
 </html>
